Updated frontend with the newest code

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -1,9 +1,10 @@
 server {
-  listen 80;
+    listen 80 default_server;
+    server_name localhost;
 
-  location / {
-    root /usr/share/nginx/html/;
-    include /etc/nginx/mime.types;
-    try_files $uri $uri/ /index.html;
-  }
+    # Any route that doesn't have a file extension (e.g. /devices)
+    location / {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+    }
 }
