--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,27 @@
 services:
   frontend:
-    build:
-      context: ./Frontend
+    build: ./Frontend
     ports:
-      - 8080:80
+      - 80:80
     depends_on:
       - backend
   backend:
-    build: 
-      context: ./Backend
-      dockerfile: Dockerfile
-    environment:
-      - NODE_ENV=development
-      - PORT=3000
-      - MONGO_USERNAME=devantler
-      - MONGO_PASSWORD=password
-      - MONGO_DB_NAME=admin
-      - REDIS_URI=redis://redis:6379
+    build: ./Backend
     ports:
       - 3000:3000
+    environment:
+      - PORT=3000
+      - NODE_ENV=development
+      - MONGO_DB_CONNECTION_STRING=mongodb://devantler:password@mongo:27017
+      - MONGO_DB_NAME=admin
+      - REDIS_URI=redis://redis:6379
     depends_on:
       - redis
       - mongo
   redis:
     image: redis:alpine
+    volumes:
+      - redis-data:/data
     ports:
       - "6379:6379"
   mongo:
@@ -31,7 +29,11 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - ./data/db:/data/db
+      - mongo-data:/data/db
     environment:
       - MONGO_INITDB_ROOT_USERNAME=devantler
       - MONGO_INITDB_ROOT_PASSWORD=password
+
+volumes:
+  mongo-data:
+  redis-data:
