--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -13,13 +13,17 @@ jobs:
               uses: actions/checkout@v3
             - name: Setup Terraform to be used in the GitHub Action
               uses: hashicorp/setup-terraform@v2
+              with:
+                cli_config_credentials_token: ${{ secrets.TF_API_TOKEN}}
+            - name: Change directory
+              run: cd terraform
             - name: Terraform Init
-              run: terraform -chdir=terraform init
+              run: terraform init
               env:
                   GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
             - name: Terraform Format
-              run: terraform -chdir=terraform fmt -check
+              run: terraform fmt -check
             - name: Terraform Plan
-              run: terraform -chdir=terraform plan
+              run: terraform plan
             - name: Terraform Apply
-              run: terraform -chdir=terraform apply -auto-approve
+              run: terraform apply -auto-approve
