--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -19,12 +19,8 @@ jobs:
               uses: hashicorp/setup-terraform@v2
               with:
                 cli_config_credentials_token: ${{ secrets.TF_API_TOKEN}}
-            - name: Terraform Init
-              run: terraform init
-            - name: Terraform Format
-              run: terraform fmt -check
-              continue-on-error: true
-            - name: Terraform Plan
-              run: terraform plan
-            - name: Terraform Apply
-              run: terraform apply -auto-approve
+            - run: terraform init
+            - run: terraform plan
+            - run: terraform apply -auto-approve
+            - name: TROELS IS A CUNT
+              run: echo "Hey my name is troels and i am a cunt!"
