--- a/.github/workflows/publish-images.yaml
+++ b/.github/workflows/publish-images.yaml
@@ -42,6 +42,7 @@ jobs:
           context: Frontend/
           file: Frontend/Dockerfile
           platforms: linux/amd64, linux/arm64
+          load: true
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -84,7 +85,8 @@ jobs:
           context: Backend/
           file: Backend/Dockerfile
           platforms: linux/amd64, linux/arm64
-          push: true
+          load: true
+          push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
