--- a/.github/workflows/publish-images.yaml
+++ b/.github/workflows/publish-images.yaml
@@ -86,7 +86,7 @@ jobs:
           file: Backend/Dockerfile
           platforms: linux/amd64, linux/arm64
           load: true
-          push: false
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
