--- a/.github/workflows/publish-images.yaml
+++ b/.github/workflows/publish-images.yaml
@@ -25,17 +25,6 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker BuildX
         uses: docker/setup-buildx-action@v2
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ghcr.io/${{ github.repository_owner }}/ccecaa-frontend
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
@@ -43,8 +32,7 @@ jobs:
           file: Frontend/Dockerfile
           platforms: linux/amd64, linux/arm64
           load: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ github.repository_owner }}/ccecaa-frontend
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - name: list docker images
@@ -65,19 +53,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
+      - name: Set up Docker BuildX
         uses: docker/setup-buildx-action@v2
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ghcr.io/${{ github.repository_owner }}/ccecaa-backend
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
@@ -85,8 +62,7 @@ jobs:
           file: Backend/Dockerfile
           platforms: linux/amd64, linux/arm64
           load: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ github.repository_owner }}/ccecaa-backend
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - name: list docker images
