--- a/.github/workflows/publish-images.yaml
+++ b/.github/workflows/publish-images.yaml
@@ -35,7 +35,7 @@ jobs:
         uses: mattes/gce-docker-push-action@v1
         with:
             creds: ${{ secrets.GOOGLE_CREDENTIALS }}
-            src: ghcr.io/${{ github.repository_owner }}/ccecaa-frontend
+            src: ${{ github.repository_owner }}/ccecaa-frontend
             dst: gcr.io/${{ env.GC_PROJECT_ID }}/ccecaa-frontend:${{github.run_number}}-${{github.sha}}
   build-and-publish-ccecaa-backend:
     runs-on: ubuntu-22.04
@@ -59,5 +59,5 @@ jobs:
         uses: mattes/gce-docker-push-action@v1
         with:
             creds: ${{ secrets.GOOGLE_CREDENTIALS }}
-            src: ghcr.io/${{ github.repository_owner }}/ccecaa-backend
+            src: ${{ github.repository_owner }}/ccecaa-backend
             dst: gcr.io/${{ env.GC_PROJECT_ID }}/ccecaa-backend:${{github.run_number}}-${{github.sha}}
