--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
@@ -24,8 +28,8 @@ jobs:
           platforms: linux/amd64
           load: true
           tags: ${{ github.repository_owner }}/ccecaa-frontend
-      - name: list docker images
-        run: docker image list
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       - name: Push image to Google Container registry
         uses: mattes/gce-docker-push-action@v1
         with:
@@ -40,6 +44,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
@@ -48,8 +56,8 @@ jobs:
           platforms: linux/amd64
           load: true
           tags: ${{ github.repository_owner }}/ccecaa-backend
-      - name: list docker images
-        run: docker image list
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       - name: Push image to Google Container registry
         uses: mattes/gce-docker-push-action@v1
         with:
