--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,7 +41,7 @@ jobs:
         with:
             creds: ${{ secrets.GOOGLE_CREDENTIALS }}
             src: ${{ github.repository_owner }}/ccecaa-frontend
-            dst: gcr.io/${{ env.GC_PROJECT_ID }}/ccecaa-frontend:latest
+            dst: gcr.io/${{ env.GC_PROJECT_ID }}/ccecaa-frontend:master
   build-and-publish-ccecaa-backend:
     runs-on: ubuntu-22.04
     permissions:
@@ -75,7 +75,7 @@ jobs:
         with:
             creds: ${{ secrets.GOOGLE_CREDENTIALS }}
             src: ${{ github.repository_owner }}/ccecaa-backend
-            dst: gcr.io/${{ env.GC_PROJECT_ID }}/ccecaa-backend:latest
+            dst: gcr.io/${{ env.GC_PROJECT_ID }}/ccecaa-backend:master
 
   terraform:
     needs: [build-and-publish-ccecaa-frontend, build-and-publish-ccecaa-backend]
