--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -101,8 +101,7 @@ jobs:
       - name: Setup Terraform to be used in the GitHub Action
         uses: hashicorp/setup-terraform@v2
         with:
-            cli_config_credentials_token: ${{ secrets.TF_API_TOKEN}}
-
+            terraform_wrapper: false
       - run: terraform init
       - run: terraform plan
       - run: terraform apply -auto-approve
