terraform conf done

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -103,5 +103,6 @@ jobs:
         with:
             terraform_wrapper: false
       - run: terraform init
+      - run: terraform validate
       - run: terraform plan
       - run: terraform apply -auto-approve
