--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,15 +5,17 @@ services:
       - 8080:8080
     depends_on:
       - backend
+    environment:
+      - NODE_ENV=development
   backend:
     build: ./Backend
     ports:
-      - 3000:8080
+      - 3000:3000
     environment:
-      - PORT=8080
+      - PORT=3000
       - NODE_ENV=development
       - MONGO_DB_CONNECTION_STRING=mongodb://devantler:password@mongo:27017 # Local connection string
-      - MONGO_DB_NAME=admin
+      - MONGO_DB_NAME=gcp-cloud-project
       - REDIS_URI=redis://redis:6379
     depends_on:
       - redis
