--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,7 +22,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
-    "bullmq": "^3.0.0",
+    "bullmq": "^1.90.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -34,7 +34,7 @@
     "mongodb": "^4.9.0",
     "mongoose": "^6.5.4",
     "nodemon": "^2.0.19",
-    "npm": "^9.0.0",
+    "npm": "^8.19.2",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.5.1",
     "ts-node": "^10.9.1",
@@ -42,8 +42,8 @@
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.18.11/xlsx-0.18.11.tgz"
   },
   "devDependencies": {
-    "@types/node": "18.11.10",
-    "socket.io-client": "4.5.4"
+    "@types/node": "^18.7.18",
+    "socket.io-client": "^4.5.1"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.6",
