--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,41 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@googlemaps/react-wrapper": "1.1.35",
-    "@tensorflow/tfjs": "4.1.0",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "14.4.3",
-    "@types/google-map-react": "2.1.7",
-    "@types/google.maps": "3.50.5",
-    "@types/jest": "29.2.3",
-    "@types/node": "18.11.10",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
-    "@types/socket.io-client": "3.0.0",
-    "@vladmandic/face-api": "1.7.7",
-    "firebase": "9.14.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router": "6.4.4",
-    "react-router-dom": "6.4.4",
-    "react-scripts": "5.0.1",
-    "sass": "1.56.1",
-    "socket.io-client": "4.5.4",
-    "typescript": "4.9.3",
-    "web-vitals": "3.1.0",
-    "workbox-background-sync": "6.5.4",
-    "workbox-broadcast-update": "6.5.4",
-    "workbox-cacheable-response": "6.5.4",
-    "workbox-core": "6.5.4",
-    "workbox-expiration": "6.5.4",
-    "workbox-google-analytics": "6.5.4",
-    "workbox-navigation-preload": "6.5.4",
-    "workbox-precaching": "6.5.4",
-    "workbox-range-requests": "6.5.4",
-    "workbox-routing": "6.5.4",
-    "workbox-strategies": "6.5.4",
-    "workbox-streams": "6.5.4"
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@tensorflow/tfjs": "^3.20.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/google-map-react": "^2.1.7",
+    "@types/google.maps": "^3.49.2",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@types/socket.io-client": "^3.0.0",
+    "@vladmandic/face-api": "^1.7.2",
+    "firebase": "^9.8.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.52.3",
+    "socket.io-client": "4.3.0",
+    "typescript": "^4.7.4",
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.5.3",
+    "workbox-broadcast-update": "^6.5.3",
+    "workbox-cacheable-response": "^6.5.3",
+    "workbox-core": "^6.5.3",
+    "workbox-expiration": "^6.5.3",
+    "workbox-google-analytics": "^6.5.3",
+    "workbox-navigation-preload": "^6.5.3",
+    "workbox-precaching": "^6.5.3",
+    "workbox-range-requests": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3",
+    "workbox-streams": "^6.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
