--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,3 +21,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Build Backend
         run: cd Backend; npm install; npm run build;
+  
+  auto-merge:
+    needs: [build-frontend, build-backend]
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: alexwilson/enable-github-automerge-action@1.0.0
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
+          merge-method: "SQUASH"
