--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,8 @@
 name: Build and test
 on:
   pull_request:
-    branches:
+  push: 
+    branches: 
       - master
 
 jobs:
@@ -22,10 +23,10 @@ jobs:
         run: cd Backend; npm install; npm run build;
   
   auto-merge:
-    needs: [build-frontend, build-backend]
     runs-on: ubuntu-22.04
     steps:
-      - uses: alexwilson/enable-github-automerge-action@1.0.0
+      - uses: peter-evans/enable-pull-request-automerge@v2
         with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-          merge-method: "SQUASH"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          pull-request-number: ${{ steps.cpr.outputs.pull-request-number }}
+          merge-method: squash
