--- a/Frontend/nginx.conf.template
+++ b/Frontend/nginx.conf.template
@@ -6,5 +6,7 @@ server {
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
+        ssi on;
+        set $react_app_region "${REGION}";
     }
 }
