--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -17,8 +17,8 @@ FROM nginx:alpine as production-stage
 ENV NODE_ENV=production, REGION=asia-east1
 
 COPY --from=build-stage /app/build /usr/share/nginx/html
-COPY nginx.conf.template /etc/nginx/conf.d/default.conf.template
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 8080
 
-CMD sh -c "envsubst < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
+CMD ["sh", "-c", "cd /usr/share/nginx/html/ && ./set-env.sh && nginx -g 'daemon off;'"]
